Edit paths and seed

--- a/data_prod/dashboard/bertopic/template/dashboard.html
+++ b/data_prod/dashboard/bertopic/template/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <title>Topic {{ topic }}</title>
   <script src="https://cdn.jsdelivr.net/npm/vega@6"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@6"></script>
@@ -57,7 +57,6 @@
 </script>
 <script type="text/javascript">
   var spec = {{json_chart}};
-  console.log(spec);
   var opt = {"renderer": "canvas", "actions": false};
   vegaEmbed("#vis", spec, opt);
 </script>
