--- a/data_prod/dashboard/bertopic/template/dashboard.html
+++ b/data_prod/dashboard/bertopic/template/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" type=“text/css” href="css/style.css"/>
   <title>Topic {{ topic }}</title>
   <script src="https://cdn.jsdelivr.net/npm/vega@6"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@6"></script>
